tests/snapshots/examples_fixtures/namespaces__alias_nested_ok.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/namespaces/alias_nested_ok.flx
== compile ==
failed (module)
== diagnostics ==
error[E018]: Import Not Found

Cannot find module `Modules.Data.Math.Test` to import.

  examples/namespaces/alias_nested_ok.flx:1:1
  |
1 | import Modules.Data.Math.Test as MathTest
  | ^

Hint:
  Check that: 1) The module file exists (e.g., `Modules.Data.Math.Test.flx`), 2) The file is in a module root directory (current dir or ./src by default), 3) The module path matches the file structure (e.g., `Foo.Bar` → `Foo/Bar.flx`). Use `--root` flag to add more search paths.
  Looked for module `Modules.Data.Math.Test` under roots: examples/namespaces, src, lib (imported from examples/namespaces/alias_nested_ok.flx).
== stdout ==
<not executed>
